// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBooleanField render() renders new field without form context 1`] = `
<RadioBooleanField
  name="fieldName"
  noLabel="No"
  yesLabel="Yes"
>
  <InputField
    field={[Function]}
    name="fieldName"
    noLabel="No"
    yesLabel="Yes"
  >
    <FormField
      field={[Function]}
      flexibleControlStateSize={false}
      hideErrorMessage={false}
      name="fieldName"
      noLabel="No"
      yesLabel="Yes"
    >
      <Field
        alignRight={false}
        disabled={false}
        field={[Function]}
        flexibleControlStateSize={false}
        id="fieldName"
        inline={true}
        name="fieldName"
        noLabel="No"
        required={false}
        visible={true}
        yesLabel="Yes"
      >
        <FieldWrapper
          hasControlState={true}
          inline={true}
        >
          <Component
            className="css-1xtb51p-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20"
          >
            <Flex
              className="css-1xtb51p-FieldWrapper-getPadding-borderStyle-inlineStyle etqqcs20"
            >
              <Base
                className="etqqcs20 css-rbbyml-FieldWrapper-getPadding-borderStyle-inlineStyle"
              >
                <div
                  className="etqqcs20 css-rbbyml-FieldWrapper-getPadding-borderStyle-inlineStyle"
                  is={null}
                >
                  <FieldControl
                    alignRight={false}
                    controlState={
                      <ControlState
                        model={
                          MockModel {
                            "initialData": Object {
                              "fieldName": undefined,
                            },
                            "props": Object {
                              "children": [Function],
                              "className": undefined,
                              "field": [Function],
                              "flexibleControlStateSize": false,
                              "hideErrorMessage": false,
                              "name": "fieldName",
                              "noLabel": "No",
                              "yesLabel": "Yes",
                            },
                          }
                        }
                        name="fieldName"
                      />
                    }
                    disabled={false}
                    errorState={
                      <Observer>
                        [Function]
                      </Observer>
                    }
                    flexibleControlStateSize={false}
                    inline={true}
                  >
                    <FieldControlErrorWrapper
                      inline={true}
                    >
                      <Component
                        className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0"
                        inline={true}
                      >
                        <Box
                          className="css-1xbxyck-FieldControlErrorWrapper e78b1iv0"
                        >
                          <Base
                            className="e78b1iv0 css-1kkovz0-FieldControlErrorWrapper"
                          >
                            <div
                              className="e78b1iv0 css-1kkovz0-FieldControlErrorWrapper"
                              is={null}
                            >
                              <FieldControlWrapper>
                                <Component
                                  className="css-1ke1xob-FieldControlWrapper e78b1iv2"
                                >
                                  <Flex
                                    className="css-1ke1xob-FieldControlWrapper e78b1iv2"
                                  >
                                    <Base
                                      className="e78b1iv2 css-w4o1g8-FieldControlWrapper"
                                    >
                                      <div
                                        className="e78b1iv2 css-w4o1g8-FieldControlWrapper"
                                        is={null}
                                      >
                                        <FieldControlStyled
                                          alignRight={false}
                                        >
                                          <Component
                                            alignRight={false}
                                            className="css-1e3k5jy-FieldControlStyled e78b1iv1"
                                          >
                                            <Box
                                              className="css-1e3k5jy-FieldControlStyled e78b1iv1"
                                            >
                                              <Base
                                                className="e78b1iv1 css-1b7m0vu-FieldControlStyled"
                                              >
                                                <div
                                                  className="e78b1iv1 css-1b7m0vu-FieldControlStyled"
                                                  is={null}
                                                >
                                                  <Observer>
                                                    <RadioBoolean
                                                      disabled={false}
                                                      field={[Function]}
                                                      id="fieldName"
                                                      initialData={
                                                        Object {
                                                          "fieldName": undefined,
                                                        }
                                                      }
                                                      innerRef={[Function]}
                                                      name="fieldName"
                                                      noLabel="No"
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      yesFirst={true}
                                                      yesLabel="Yes"
                                                    >
                                                      <div>
                                                        <Option
                                                          checked={false}
                                                          disabled={false}
                                                          label="Yes"
                                                          name="fieldName"
                                                          onChange={[Function]}
                                                          value="true"
                                                        >
                                                          <div
                                                            className="radio"
                                                          >
                                                            <label
                                                              style={
                                                                Object {
                                                                  "fontWeight": "normal",
                                                                }
                                                              }
                                                            >
                                                              <input
                                                                checked={false}
                                                                disabled={false}
                                                                name="fieldName"
                                                                onChange={[Function]}
                                                                type="radio"
                                                                value="true"
                                                              />
                                                               
                                                              Yes
                                                            </label>
                                                          </div>
                                                        </Option>
                                                        <Option
                                                          checked={false}
                                                          disabled={false}
                                                          label="No"
                                                          name="fieldName"
                                                          onChange={[Function]}
                                                          value="false"
                                                        >
                                                          <div
                                                            className="radio"
                                                          >
                                                            <label
                                                              style={
                                                                Object {
                                                                  "fontWeight": "normal",
                                                                }
                                                              }
                                                            >
                                                              <input
                                                                checked={false}
                                                                disabled={false}
                                                                name="fieldName"
                                                                onChange={[Function]}
                                                                type="radio"
                                                                value="false"
                                                              />
                                                               
                                                              No
                                                            </label>
                                                          </div>
                                                        </Option>
                                                      </div>
                                                    </RadioBoolean>
                                                  </Observer>
                                                </div>
                                              </Base>
                                            </Box>
                                          </Component>
                                        </FieldControlStyled>
                                        <FieldControlState
                                          flexibleControlStateSize={false}
                                        >
                                          <Component
                                            className="css-1j6hng-FieldControlState e1rziqw00"
                                            flexibleControlStateSize={false}
                                          >
                                            <Flex
                                              className="css-1j6hng-FieldControlState e1rziqw00"
                                            >
                                              <Base
                                                className="e1rziqw00 css-1fqbh7r-FieldControlState"
                                              >
                                                <div
                                                  className="e1rziqw00 css-1fqbh7r-FieldControlState"
                                                  is={null}
                                                >
                                                  <ControlState
                                                    model={
                                                      MockModel {
                                                        "initialData": Object {
                                                          "fieldName": undefined,
                                                        },
                                                        "props": Object {
                                                          "children": [Function],
                                                          "className": undefined,
                                                          "field": [Function],
                                                          "flexibleControlStateSize": false,
                                                          "hideErrorMessage": false,
                                                          "name": "fieldName",
                                                          "noLabel": "No",
                                                          "yesLabel": "Yes",
                                                        },
                                                      }
                                                    }
                                                    name="fieldName"
                                                  >
                                                    <Observer />
                                                    <Observer />
                                                  </ControlState>
                                                </div>
                                              </Base>
                                            </Flex>
                                          </Component>
                                        </FieldControlState>
                                      </div>
                                    </Base>
                                  </Flex>
                                </Component>
                              </FieldControlWrapper>
                              <Observer />
                            </div>
                          </Base>
                        </Box>
                      </Component>
                    </FieldControlErrorWrapper>
                  </FieldControl>
                </div>
              </Base>
            </Flex>
          </Component>
        </FieldWrapper>
      </Field>
    </FormField>
  </InputField>
</RadioBooleanField>
`;

exports[`RadioBooleanField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <div
        className="radio"
        key="yes"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={true}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="true"
          />
           
          Yes
        </label>
      </div>
      <div
        className="radio"
        key="no"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="false"
          />
           
          No
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioBooleanField render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <div
        className="radio"
        key="yes"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="true"
          />
           
          Yes
        </label>
      </div>
      <div
        className="radio"
        key="no"
      >
        <label
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          <input
            checked={false}
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            type="radio"
            value="false"
          />
           
          No
        </label>
      </div>
    </div>
  </div>
</div>
`;
